--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <!-- --> <br>
             <a href="mailto:nicolasteixeira3856@outlook.com" class="text-primary">nicolasteixeira3856@outlook.com</a>
           </div>
-          <p class="mb-5">Às vezes, são as pessoas de quem menos esperamos que fazem coisas que ninguém poderia esperar</p>
+          <p class="mb-5">Às vezes, são as pessoas de quem menos esperamos que fazem coisas que ninguém poderia esperar.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/nícolas-teixeira-293446124/">
@@ -98,7 +98,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">SENAI Boqueirão</h3>
               <div class="subheading mb-3">Técnico em Informática</div>
-              <div>Programação Web (front-end e back-end), desenvolvimento de aplicativos android, banco de dados, testes de projeto e UML</div>
+              <div>Programação Web (Front-end e Back-end), Desenvolvimento de Aplicativos Android, Banco de Dados, Testes de Projeto e UML</div>
               <p></p>
             </div>
             <div class="resume-date text-md-right">
