--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="assets/js/jquery-easing/jquery.easing.min.js"></script>
+    <script src="assets/js/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="assets/js/resume.min.js"></script>
