--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Projetos</a>
-          </li>
+          </li>-->
         </ul>
       </div>
     </nav>
@@ -153,16 +153,31 @@
               <i class="devicons devicons-css3"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
+              <i class="devicons devicons-php"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-php"></i>
+              <i class="devicons devicons-javascript"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-jquery"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-bootstrap"></i>
+            </li>           
+            <li class="list-inline-item">
+              <i class="devicons devicons-sass"></i>
+            </li>            
+            <li class="list-inline-item">
+              <i class="devicons devicons-less"></i>
+            </li>            
+            <li class="list-inline-item">
+              <i class="devicons devicons-debian"></i>
+            </li>            
+            <li class="list-inline-item">
+              <i class="devicons devicons-android"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-github"></i>
             </li>
           </ul>
 
@@ -170,32 +185,35 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Design Responsivo</li>
+              Mobile-first</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Testes Cross Browser &amp; Debug</li>
+              Testes Cross Browser</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Orientação a Objetos &amp; Criptografia de Dados Sensíveis</li>
+              Criptografia de Dados Sensíveis</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Desenvolvimento Ágil &amp; Scrum</li>
+              Desenvolvimento Ágil</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Testes de Projeto &amp; Documentação de Projeto</li>
+              Testes de Projeto</li>            
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Documentação de Projeto</li>
           </ul>
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+      <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Projetos</h2>
             <p class="subheading mb-3">Alguns projetos efetuados: </p>
-            <!-- --><br>
+            <!-- --><!-- <br> 
            <a href="https://www.ctbarmc-imobiliariabeta.com.br"><p class="text-primary"> Imobiliária Beta </p></a>
            <a href="http://johnhelp.com.br"><p class="text-primary"> JohnHelp </p></a>
         </div>
-      </section>
+      </section> -->
 
     </div>
 
