--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div> <!--Inicio da div sticky menu -->
-        <ul class="nav nav-pills nav-fill sticky-top bg-dark justify-content-center">
+        <!--<ul class="nav sticky-top bg-dark justify-content-center">
             <li class="nav-item">
                 <a class="nav-link text-info" href="#formacao">Formação acadêmica</a>
             </li>
@@ -48,9 +48,30 @@
                 <a class="nav-link text-info" href="#cursos-certificados">Cursos/certificados</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-info" href="#">Portfólio</a>
+                <a class="nav-link text-info" href="#">Projetos</a>
             </li>
-        </ul>
+            <li class="nav-item">
+                <a class="nav-link text-info" href="#">Workflow</a>
+            </li>
+        </ul>-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mx-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Formação acadêmica</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cursos/certificados</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Portfolio</a>
+                </li>
+                </ul>
+            </div>
+        </nav>
         <section id="formacao">
             <div class="container">
                 <br><br>
@@ -128,8 +149,8 @@
                 <p>Leia um pouco mais sobre os projetos pessoais que realizei.</p>
                 <br><br>
                 <div class="row">
-                    <div class="col-lg-4">
-                        <div class="card" style="width: 18rem;">
+                    <div class="col-lg-4 col-responsivo">
+                        <div class="card text-white bg-dark" style="width: 18rem;">
                             <img class="card-img-top" src="img/projeto1.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -137,8 +158,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="card" style="width: 18rem;">
+                    <div class="col-lg-4 col-responsivo">
+                        <div class="card text-white bg-dark" style="width: 18rem;">
                             <img class="card-img-top" src="img/projeto2.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -146,8 +167,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="card" style="width: 18rem;">
+                    <div class="col-lg-4 col-responsivo">
+                        <div class="card text-white bg-dark" style="width: 18rem;">
                             <img class="card-img-top" src="img/projeto3.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -159,7 +180,7 @@
                 <br>
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card text-white bg-dark" style="width: 18rem;">
                             <img class="card-img-top" src="img/projeto4.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -167,8 +188,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="card" style="width: 18rem;">
+                    <div class="col-lg-4 col-responsivo">
+                        <div class="card text-white bg-dark" style="width: 18rem;">
                             <img class="card-img-top" src="img/projeto5.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -176,8 +197,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="card" style="width: 18rem;">
+                    <div class="col-lg-4 col-responsivo">
+                        <div class="card text-white bg-dark" style="width: 18rem;">
                             <img class="card-img-top" src="img/projeto6.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
