Alterações finais no portfolio

--- a/index.html
+++ b/index.html
@@ -13,47 +13,16 @@
 
   </head>
   <body>
-
-    <!-- <nav class="navbar navbar-dark bg-dark navbar-expand-sm">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <span class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </span>
-            </ul>
-        </div>
-    </nav> -->
-
     <div class="caixa1">
         <div class="conteudo-titulo">
             <span class="titulo d-inline-block">
                 Portfólio Nícolas Teixeira
                 <br>
-                <a href="#formacao" class="text-info">Saiba mais</a>
+                <a href="#formacao" class="btn btn-info">Saiba mais</a>
             </span>
         </div>
     </div>
     <div> <!--Inicio da div sticky menu -->
-        <!--<ul class="nav sticky-top bg-dark justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link text-info" href="#formacao">Formação acadêmica</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-info" href="#cursos-certificados">Cursos/certificados</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-info" href="#">Projetos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-info" href="#">Workflow</a>
-            </li>
-        </ul>-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -61,19 +30,19 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Formação acadêmica</a>
+                    <a class="nav-link text-info" href="#formacao">Formação acadêmica</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Cursos/certificados</a>
+                    <a class="nav-link text-info" href="#cursos-certificados">Cursos/certificados</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link text-info" href="#portfolio">Portfolio</a>
                 </li>
                 </ul>
             </div>
         </nav>
-        <section id="formacao">
-            <div class="container">
+        <section id="formacao"><!-- Inicio do section formação -->
+            <div class="container"> <!-- Inicio container -->
                 <br><br>
                 <h1 class="display-4">Formação acadêmica</h1>
                 <br><br>
@@ -118,11 +87,11 @@
                         <p>2016</p>
                     </div>
                 </div>
-            </div>
-        </section>
+            </div><!-- Fim container -->
+        </section> <!-- Fim do section formação -->
         <hr>
-        <section id="cursos-certificados">
-            <div class="container">
+        <section id="cursos-certificados"> <!-- Inicio do section cursos e certificados -->
+            <div class="container"> <!-- Inicio container -->
                 <br><br>
                 <h1 class="display-4">Cursos/certificados</h1>
                 <br><br>
@@ -139,40 +108,50 @@
                         <p>Certificado de conclusão disponível em breve</p>
                     </div>
                 </div>
-            </div>
-        </section>
+            </div><!-- Fim container -->
+        </section> <!-- Fim do section cursos e certificados -->
         <hr>
-        <section id="portfolio">
-            <div class="container">
+        <section id="portfolio"><!-- Inicio do Section Portfolio -->
+            <div class="container"> <!-- Inicio container -->
                 <br><br>
                 <h1 class="display-4">Portfolio</h1>
-                <p>Leia um pouco mais sobre os projetos pessoais que realizei.</p>
                 <br><br>
+                <h3>Projetos pessoais</h2>
+                <br>
                 <div class="row">
                     <div class="col-lg-4 col-responsivo">
-                        <div class="card text-white bg-dark" style="width: 18rem;">
+                        <div class="card text-white bg-dark" style="width: 18rem; height: 100%;">
                             <img class="card-img-top" src="img/projeto1.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text">
+                                    UNES Universidade
+                                    <p>Projeto para o site de uma Universidade. <br> Tecnologias: HTML5 básico</p>
+                                </p>
+                                <a href="https://github.com/nicolasteixeira3856/Projeto-UNES-Universidade" class="btn btn-info" style="margin-top:24px;">Source code</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-responsivo">
-                        <div class="card text-white bg-dark" style="width: 18rem;">
+                        <div class="card text-white bg-dark" style="width: 18rem; height: 100%;">
                             <img class="card-img-top" src="img/projeto2.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text">
+                                    Anna Bella
+                                    <p>Projeto para o site de uma modelo. <br> Tecnologias: HTML5/CSS3 básico</p>
+                                </p>
+                                <a href="https://github.com/nicolasteixeira3856/Projeto-Anna-Bella" class="btn btn-info" style="margin-top:24px;">Source code</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-responsivo">
-                        <div class="card text-white bg-dark" style="width: 18rem;">
+                        <div class="card text-white bg-dark" style="width: 18rem; height: 100%;">
                             <img class="card-img-top" src="img/projeto3.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text">
+                                    TecBlog
+                                    <p>Projeto para um blog de tecnologia. <br> Tecnologias: HTML5/CSS3 intermediário</p>
+                                </p>
+                                <a href="https://github.com/nicolasteixeira3856/Projeto-TecBlog" class="btn btn-info">Source code</a>
                             </div>
                         </div>
                     </div>
@@ -180,35 +159,76 @@
                 <br>
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="card text-white bg-dark" style="width: 18rem;">
+                        <div class="card text-white bg-dark" style="width: 18rem; height: 100%;">
                             <img class="card-img-top" src="img/projeto4.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text">
+                                    NotíciasCidade
+                                    <p>Projeto para um site de notícias. <br> Tecnologias: HTML5/CSS3 avançado</p>
+                                </p>
+                                <a href="https://github.com/nicolasteixeira3856/Projeto-NoticiasCidade" class="btn btn-info" style="margin-top:23px;">Source code</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-responsivo">
-                        <div class="card text-white bg-dark" style="width: 18rem;">
+                        <div class="card text-white bg-dark" style="width: 18rem; height: 100%;">
                             <img class="card-img-top" src="img/projeto5.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text">
+                                    ChaléHotel
+                                    <p>Projeto para um site de hotel. <br> Tecnologias: HTML5/CSS3 avançado</p>
+                                </p>
+                                <a href="https://github.com/nicolasteixeira3856/Projeto-ChaleHotel" class="btn btn-info" style="margin-top:23px;">Source code</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-responsivo">
-                        <div class="card text-white bg-dark" style="width: 18rem;">
+                        <div class="card text-white bg-dark" style="width: 18rem; height: 100%;">
                             <img class="card-img-top" src="img/projeto6.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text">
+                                    Museu Nacional
+                                    <p>Projeto para um site do Museu Nacional. <br> Tecnologias: HTML5/CSS3 avançado</p>
+                                </p>
+                                <a href="https://github.com/nicolasteixeira3856/Projeto-MuseuNacional" class="btn btn-info">Source code</a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+                <br><br>
+                <h3>Projetos profissionais</h2>
+                <br>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="card text-white bg-dark" style="width: 18rem;">
+                            <img class="card-img-top" src="img/projeto7.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <p class="card-text">
+                                    Mecânica Kustom
+                                    <p>Site profissional para uma mecânica de veículos em Curitiba.</p>
+                                </p>
+                                <a href="https://www.mecanicakustom.com.br" class="btn btn-info">Visitar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                    </div>
+                    <div class="col-lg-4">
+                    </div>
+                </div>
+            </div> <!-- Fim container -->
+        </section> <!-- Fim do section portfolio -->
+        <br><br>
+        <div class="text-white bg-dark text-center">
+            <footer class="footer">
+                <div class="container">
+                    <br><br>
+                    &copy; Nícolas Teixeira<br>
+                    <a href="https://github.com/nicolasteixeira3856">Github</a>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/nícolas-teixeira-293446124/">LinkedIn</a>
+                    <br><br>
+                </div>
+            </footer>
+        </div>
     </div><!-- Fim da div do sticky menu-->
     <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
