Mudanças finais ao index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a class="nav-link text-info" href="#cursos-certificados">Cursos/certificados</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-info" href="#portfolio">Portfolio</a>
+                    <a class="nav-link text-info" href="#projetos">Projetos</a>
                 </li>
                 </ul>
             </div>
@@ -111,10 +111,10 @@
             </div><!-- Fim container -->
         </section> <!-- Fim do section cursos e certificados -->
         <hr>
-        <section id="portfolio"><!-- Inicio do Section Portfolio -->
+        <section id="projetos"><!-- Inicio do Section projetos -->
             <div class="container"> <!-- Inicio container -->
                 <br><br>
-                <h1 class="display-4">Portfolio</h1>
+                <h1 class="display-4">Projetos</h1>
                 <br><br>
                 <h3>Projetos pessoais</h2>
                 <br>
@@ -217,7 +217,7 @@
                     </div>
                 </div>
             </div> <!-- Fim container -->
-        </section> <!-- Fim do section portfolio -->
+        </section> <!-- Fim do section projetos -->
         <br><br>
         <div class="text-white bg-dark text-center">
             <footer class="footer">
