--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/estilo.css">
 
     <title>Portfólio Nícolas Teixeira</title>
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
   </head>
   <body>
