Mudanças finais ao projeto
Adicionado efeito de opacity no hover do conteúdo do cardbox, adicionado formas de contato e smooth scrool.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-info" href="#formacao">Formação acadêmica</a>
+                    <a class="nav-link text-info" href="#formacao">Formação</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-info" href="#cursos-certificados">Cursos/certificados</a>
@@ -45,7 +45,7 @@
         <section id="formacao"><!-- Inicio do section formação -->
             <div class="container"> <!-- Inicio container -->
                 <br><br>
-                <h1 class="display-4">Formação acadêmica</h1>
+                <h1 class="display-4">Formação</h1>
                 <br><br>
                 <div class="row">
                     <div class="col-sm-4">
@@ -117,100 +117,109 @@
                 <br><br>
                 <h1 class="display-4">Projetos</h1>
                 <br><br>
-                <h3>Projetos pessoais</h2>
-                <br>
+                <h3>Projetos pessoais</h3>
+                Clique na caixa para visualizar o source code direto em meu GitHub
+                <br><br>
                 <div class="row">
                     <div class="col-lg-4 col-responsivo">
-                        <div class="card text-white bg-dark" style="width: 18rem; height: 100%;">
-                            <img class="card-img-top" src="img/projeto1.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">
-                                    UNES Universidade
-                                    <p>Projeto para o site de uma Universidade. <br> Tecnologias: HTML5 básico</p>
-                                </p>
-                                <a href="https://github.com/nicolasteixeira3856/Projeto-UNES-Universidade" class="btn btn-info" style="margin-top:24px;">Source code</a>
+                        <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-UNES-Universidade">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        UNES Universidade
+                                        <p>Projeto para o site de uma Universidade. <br> Tecnologias: HTML5 básico</p>
+                                    </p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-lg-4 col-responsivo">
-                        <div class="card text-white bg-dark" style="width: 18rem; height: 100%;">
-                            <img class="card-img-top" src="img/projeto2.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">
-                                    Anna Bella
-                                    <p>Projeto para o site de uma modelo. <br> Tecnologias: HTML5/CSS3 básico</p>
-                                </p>
-                                <a href="https://github.com/nicolasteixeira3856/Projeto-Anna-Bella" class="btn btn-info" style="margin-top:24px;">Source code</a>
+                        <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-Anna-Bella">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto2.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Anna Bella
+                                        <p>Projeto para o site de uma modelo. <br> Tecnologias: HTML5/CSS3 básico</p>
+                                    </p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-lg-4 col-responsivo">
-                        <div class="card text-white bg-dark" style="width: 18rem; height: 100%;">
-                            <img class="card-img-top" src="img/projeto3.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">
-                                    TecBlog
-                                    <p>Projeto para um blog de tecnologia. <br> Tecnologias: HTML5/CSS3 intermediário</p>
-                                </p>
-                                <a href="https://github.com/nicolasteixeira3856/Projeto-TecBlog" class="btn btn-info">Source code</a>
+                        <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-TecBlog">
+                            <div class="card text-white bg-dark card-content">
+                                <img class="card-img-top" src="img/projeto3.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        TecBlog
+                                        <p>Projeto para um blog de tecnologia. <br> Tecnologias: HTML5/CSS3 intermediário</p>
+                                    </p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="card text-white bg-dark" style="width: 18rem; height: 100%;">
-                            <img class="card-img-top" src="img/projeto4.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">
-                                    NotíciasCidade
-                                    <p>Projeto para um site de notícias. <br> Tecnologias: HTML5/CSS3 avançado</p>
-                                </p>
-                                <a href="https://github.com/nicolasteixeira3856/Projeto-NoticiasCidade" class="btn btn-info" style="margin-top:23px;">Source code</a>
+                        <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-NoticiasCidade">
+                            <div class="card text-white bg-dark card-content" style="width: 18rem; height: 100%;">
+                                <img class="card-img-top" src="img/projeto4.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        NotíciasCidade
+                                        <p>Projeto para um site de notícias. <br> Tecnologias: HTML5/CSS3 avançado</p>
+                                    </p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-lg-4 col-responsivo">
-                        <div class="card text-white bg-dark" style="width: 18rem; height: 100%;">
-                            <img class="card-img-top" src="img/projeto5.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">
-                                    ChaléHotel
-                                    <p>Projeto para um site de hotel. <br> Tecnologias: HTML5/CSS3 avançado</p>
-                                </p>
-                                <a href="https://github.com/nicolasteixeira3856/Projeto-ChaleHotel" class="btn btn-info" style="margin-top:23px;">Source code</a>
+                        <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-ChaleHotel">
+                            <div class="card text-white bg-dark card-content" style="width: 18rem; height: 100%;">
+                                <img class="card-img-top" src="img/projeto5.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        ChaléHotel
+                                        <p>Projeto para um site de hotel. <br> Tecnologias: HTML5/CSS3 avançado</p>
+                                    </p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-lg-4 col-responsivo">
-                        <div class="card text-white bg-dark" style="width: 18rem; height: 100%;">
-                            <img class="card-img-top" src="img/projeto6.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">
-                                    Museu Nacional
-                                    <p>Projeto para um site do Museu Nacional. <br> Tecnologias: HTML5/CSS3 avançado</p>
-                                </p>
-                                <a href="https://github.com/nicolasteixeira3856/Projeto-MuseuNacional" class="btn btn-info">Source code</a>
+                        <a class="card-link" href="https://github.com/nicolasteixeira3856/Projeto-MuseuNacional">
+                            <div class="card text-white bg-dark card-content" style="width: 18rem; height: 100%;">
+                                <img class="card-img-top" src="img/projeto6.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Museu Nacional
+                                        <p>Projeto para um site do Museu Nacional. <br> Tecnologias: HTML5/CSS3 avançado</p>
+                                    </p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <br><br>
                 <h3>Projetos profissionais</h2>
-                <br>
+                Clique na caixa para visitar o(s) site(s) 
+                <br><br>
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="card text-white bg-dark" style="width: 18rem;">
-                            <img class="card-img-top" src="img/projeto7.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">
-                                    Mecânica Kustom
-                                    <p>Site profissional para uma mecânica de veículos em Curitiba.</p>
-                                </p>
-                                <a href="https://www.mecanicakustom.com.br" class="btn btn-info">Visitar</a>
+                        <a class="card-link" href="https://www.mecanicakustom.com.br">
+                            <div class="card text-white bg-dark card-content" style="width: 18rem;">
+                                <img class="card-img-top" src="img/projeto7.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Mecânica Kustom
+                                        <p>Site profissional para uma mecânica de veículos em Curitiba.</p>
+                                    </p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-lg-4">
                     </div>
@@ -225,7 +234,8 @@
                 <div class="container">
                     <br><br>
                     &copy; Nícolas Teixeira<br>
-                    <a href="https://github.com/nicolasteixeira3856">Github</a>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/nícolas-teixeira-293446124/">LinkedIn</a>
+                    Contato: Celular 999409631 | <a class="text-info" href="mailto:nicolasteixeira3856@outlook.com">E-mail</a><br>
+                    <a class="text-info" href="https://github.com/nicolasteixeira3856">Github</a>&nbsp;&nbsp;<a class="text-info" href="https://www.linkedin.com/in/nícolas-teixeira-293446124/">LinkedIn</a>
                     <br><br>
                 </div>
             </footer>
@@ -235,5 +245,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script>
+
+    </script>
   </body>
 </html>
